[package]
name = "tetris"
version = "0.1.0"
authors = ["Robert Snakard <robert.snakard@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = '*'
wasm-bindgen = '*'

[dependencies.web-sys]
version = '*'
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'KeyboardEvent',
    'Window',
]
